@@ -136,20 +136,19 @@ public class LogicManager {
 
         for (Rule negationRule : negationRulesTriggeringRules) {
             Map<Rule, RuleDependency> visitedDependentRules = new HashMap<>();
-            visitedDependentRules.put(negationRule, RuleDependency.of(negationRule, null));
-            List<RuleDependency> frontier = new LinkedList<>(ruleDependencies(negationRule, conceptMgr, logicMgr));
-            RuleDependency dependency;
+            LinkedList<RuleDependency> frontier = new LinkedList<>(negatedRuleDependencies(negationRule, conceptMgr, logicMgr));
             while (!frontier.isEmpty()) {
-                dependency = frontier.remove(0);
+                RuleDependency dependency = frontier.removeFirst();
+                visitedDependentRules.put(dependency.recursiveRule, dependency);
                 if (negationRule.equals(dependency.recursiveRule)) {
                     List<Rule> cycle = findCycle(dependency, visitedDependentRules);
                     String readableCycle = cycle.stream().map(Rule::getLabel).collect(Collectors.joining(" -> \n", "\n", "\n"));
                     throw TypeDBException.of(CONTRADICTORY_RULE_CYCLE, readableCycle);
                 } else {
-                    visitedDependentRules.put(dependency.recursiveRule, dependency);
                     Set<RuleDependency> recursive = ruleDependencies(dependency.recursiveRule, conceptMgr, logicMgr);
-                    recursive.removeAll(visitedDependentRules.values());
-                    frontier.addAll(recursive);
+                    iterate(recursive)
+                            .filter(rule -> !visitedDependentRules.containsKey(rule.recursiveRule))
+                            .forEachRemaining(frontier::add);
                 }
             }
         }
@@ -157,7 +156,13 @@ public class LogicManager {
 
     private Set<RuleDependency> ruleDependencies(Rule rule, ConceptManager conceptMgr, LogicManager logicMgr) {
         return link(iterate(rule.condition().concludablesTriggeringRules(conceptMgr, logicMgr)),
-                    iterate(rule.condition().negatedConcludablesTriggeringRules(conceptMgr, logicMgr)))
+                iterate(rule.condition().negatedConcludablesTriggeringRules(conceptMgr, logicMgr)))
+                .flatMap(concludable -> concludable.getApplicableRules(conceptMgr, logicMgr))
+                .map(recursiveRule -> RuleDependency.of(recursiveRule, rule)).toSet();
+    }
+
+    private Set<RuleDependency> negatedRuleDependencies(Rule rule, ConceptManager conceptMgr, LogicManager logicMgr) {
+        return iterate(rule.condition().negatedConcludablesTriggeringRules(conceptMgr, logicMgr))
                 .flatMap(concludable -> concludable.getApplicableRules(conceptMgr, logicMgr))
                 .map(recursiveRule -> RuleDependency.of(recursiveRule, rule)).toSet();
     }
